--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,9 +1,16 @@
 {
-  "title": "Dumb Shirt Maker (tmp)",
-  "description": "Helps you when HITORIDAKENANTEERABENAIYO",
-  "site_name": "LoveLive! Sorter",
-  "save": "Save",
+  "title": "Custom Shirt Maker",
+  "description": "Want your own custom design? Try it here!",
+  "original_link": "@luseo29's design.",
+  "site_name": "Shirt Maker",
+  "save": "Save to PC",
+  "download": "Download",
+  "copy": "Copy to clipboard",
   "cancel": "Cancel",
+  "presets": "Select Design",
+  "customize_text": "Customize Text",
+  "preview": "Preview",
+  "light_mode": "Switch light/dark mode for black/white text version.",
   "footer": {
     "created_by": "Created by",
     "footer_text": "Thanks @luseo29 for the template",
